[workspace]
members = ["coordinator", "maker", "mobile/native", "crates/*"]
default-members = [
  "coordinator",
  "maker",
  "mobile/native",
  "crates/bitmex-client",
  "crates/bitmex-stream",
  "crates/coordinator-commons",
  "crates/ln-dlc-node",
  "crates/orderbook-client",
  "crates/orderbook-commons",
  "crates/trade",
]

resolver = "2"

[patch.crates-io]
# We should usually track the `p2pderivatives/feature/ln-dlc-channels[-10101]` branch
# TODO: once https://github.com/p2pderivatives/rust-dlc/pull/158/commits is merged we should depend on the latest commit from said branch
dlc-manager = { git = "https://github.com/p2pderivatives/rust-dlc", rev = "cf8d35c" }
dlc-messages = { git = "https://github.com/p2pderivatives/rust-dlc", rev = "cf8d35c" }
dlc = { git = "https://github.com/p2pderivatives/rust-dlc", rev = "cf8d35c" }
dlc-sled-storage-provider = { git = "https://github.com/p2pderivatives/rust-dlc", rev = "cf8d35c" }
p2pd-oracle-client = { git = "https://github.com/p2pderivatives/rust-dlc", rev = "cf8d35c" }
dlc-trie = { git = "https://github.com/p2pderivatives/rust-dlc", rev = "cf8d35c" }
simple-wallet = { git = "https://github.com/p2pderivatives/rust-dlc", rev = "cf8d35c" }

# We should usually track the `p2pderivatives/split-tx-experiment[-10101]` branch
lightning = { git = "https://github.com/p2pderivatives/rust-lightning/", rev = "b13daab9" }
lightning-background-processor = { git = "https://github.com/p2pderivatives/rust-lightning/", rev = "b13daab9" }
lightning-transaction-sync = { git = "https://github.com/p2pderivatives/rust-lightning/", rev = "b13daab9" }
lightning-net-tokio = { git = "https://github.com/p2pderivatives/rust-lightning/", rev = "b13daab9" }
lightning-persister = { git = "https://github.com/p2pderivatives/rust-lightning/", rev = "b13daab9" }

rust-bitcoin-coin-selection = { git = "https://github.com/p2pderivatives/rust-bitcoin-coin-selection" }

# Waiting for the next release
xtra = { git = "https://github.com/Restioson/xtra/", rev = "d98393a" }
